Added save button for datasets

--- a/app/views/datasets/_form.html.erb
+++ b/app/views/datasets/_form.html.erb
@@ -23,6 +23,7 @@
     </ol>
     <%= hidden_field_tag 'source', params[:source] %>
     <a id="add-another-query" class="button info">+ Add Another Term</a>
+    <button class="button pull-center" type="submit" name="save"><i class="icon-checkmark"></i> Save Selectors</button>
     <button class="button pull-right" type="submit" name="commit"><i class="icon-checkmark"></i> Start Collecting</button>
   </div>
 </div>
