Added edit form for datasets, fixed js bug with replacing template text in fields with more than one field

--- a/app/views/datasets/new.html.erb
+++ b/app/views/datasets/new.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
 
   <div class="app-title">
-    <h1><span>Step 2</span> Collector details &amp; terms</h1>
+    <h1><span>Step 2</span> Collector Selectors</h1>
   </div>
 
   <%= render 'form' %>
