--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="app-title">
     <h1><span>Collection:</span> <%= @dataset.name %></h1>
-    <a href="#"><i class="icon-modified"></i> Edit</a>
+    <a href="/datasets/<%= @dataset.id%>/edit"><i class="icon-modified"></i> Edit</a>
   </div>
 
   <div class="app-content">
