--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -23,6 +23,7 @@
     <% if @dataset.input_query_fields %>
     <h3>Terms</h3>
     <ul class="list-items">
+      <% binding.pry %>
       <% @dataset.terms.each do |query_fields| %>
       <li>
 	<i class="icon-terms"></i>
