--- a/app/views/datasets/_form.html.erb
+++ b/app/views/datasets/_form.html.erb
@@ -14,8 +14,8 @@
   </div>
 
   <div class="app-sidebars-large">
-    <h2>Enter Terms</h2>
-    <p>Single terms or multiple are allowed and will be crawled as single queries</p>
+    <h2>Enter Selectors</h2>
+    <p>Single selectors or multiple are allowed and will be crawled as single queries</p>
     <ol class="unstyled" id="term-input-list">
       <li>
         <%= render 'query_fields', count: 0 %>
