--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -21,9 +21,9 @@
     </div>
 
     <% if @dataset.input_query_fields %>
-    <h3>Terms</h3>
+    <h3>Selectors</h3>
     <ul class="list-items">
-      <% binding.pry %>
+      
       <% @dataset.terms.each do |query_fields| %>
       <li>
 	<i class="icon-terms"></i>
