--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -12,7 +12,11 @@
   <div class="app-content">
     <div class="grid-three">
       <div class="two-column">
-        <h2><% if get_count_per_dataset(@dataset) > 0 %><%= get_count_per_dataset(@dataset) %><% else %>No<% end %> Items Collected</h2>
+        <h2><% if get_count_per_dataset(@dataset) > 0 %><%= get_count_per_dataset(@dataset) %><% else %>No<% end %> Items
+          Collected</h2>
+	<h4><%="Collection will be recrawled
+	"+pluralize(@dataset.recrawl_frequency, 'time')+" per
+	"+@dataset.recrawl_interval %></h4>
       </div>
       <div class="one-column text-right">
       <% @crawlers.each do |crawler| %>
