Can now set recrawl frequency on collection creation

--- a/app/views/datasets/_recrawl_form.html.erb
+++ b/app/views/datasets/_recrawl_form.html.erb
@@ -6,16 +6,8 @@
     <br />
     <% end %>
     <hr>
-    Enter the frequency with which these selectors should be recrawled.<br />
-    <%= number_field_tag 'recrawl_frequency' %><%= label_tag "times per: "%>
-    
-    <%= radio_button_tag 'recrawl_interval', 'once' %><%= label_tag "only now" %>
-    <%= radio_button_tag 'recrawl_interval', 'minute' %><%= label_tag "minute" %>
-    <%= radio_button_tag 'recrawl_interval', 'hour' %><%= label_tag "hour" %>
-    <%= radio_button_tag 'recrawl_interval', 'day' %><%= label_tag "day" %>
-    <%= radio_button_tag 'recrawl_interval', 'week' %><%= label_tag "week" %>
-    <%= radio_button_tag 'recrawl_interval', 'month' %><%= label_tag "month" %>
-    <%= radio_button_tag 'recrawl_interval', 'year' %><%= label_tag "year" %>
+
+    <%= render 'recrawl_frequency_form'%>
     
     <%= hidden_field_tag 'collection', @dataset.id %><br /><br />
     <%= submit_tag "Re-Crawl" %>
