--- a/app/views/datasets/_edit_form.html.erb
+++ b/app/views/datasets/_edit_form.html.erb
@@ -24,6 +24,7 @@
       <% end %>
     </ol>
     <%= hidden_field_tag 'source', @dataset.source %>
+    <%= render 'recrawl_frequency_form' %>
     <a id="add-another-query" class="button info">+ Add Another Term</a>
     <button class="button pull-center" type="submit" name="save"><i class="icon-checkmark"></i> Save Selectors</button>
     <button class="button pull-right" type="submit" name="commit"><i class="icon-checkmark"></i> Start Collecting</button>
