Made progress box for tracking scraper actions

--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -27,6 +27,8 @@
       </div>
     </div>
 
+    <%= render 'progress_box' %>
+
     <% if @dataset.input_query_fields %>
     <h3>Selectors</h3>
     <ul class="list-items">
