Updated LookingGlass URL

--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -8,7 +8,7 @@
       <a class="button primary button-full" href="/datasources"><i class="icon-plus"></i> Add New Collection</a>
     </div>
     <div class="one-column">
-      <a class="button primary button-full" href="#{ENV['LOOKINGGLASS_URL']}"><i class="icon-logo"></i> View in LookingGlass</a>
+      <a class="button primary button-full" href="http://0.0.0.0:3001"><i class="icon-logo"></i> View in LookingGlass</a>
     </div>
   </div>
 
